@@ -1,3 +1,7 @@
+2009-04-01  Jeremie Dimino <jeremie@dimino.org>
+
+	* src/core/extlib/option.ml: fix t_printer
+
 2009-03-31  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
 
 	* configure.ac: [gnome-open] replaced by [x-www-browser]
